--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "webpack serve --open",
     "watch": "webpack --watch",
-    "build": "NODE_ENV=production webpack",
+    "build": "NODE_ENV=production webpack && echo '/* /index.html 200' | cat > dist/'_redirects'",
     "build-dev": "webpack"
   },
   "private": "true",
