--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "core-js": "^3.19.1",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "regenerator-runtime": "^0.13.9"
